rules/ebnf.txt
# #  comment
# () grouping
# [] optional
# *  zero or more
# +  one or more
# |  alternative

/* EBNF form */
program    ::= includes vardecls (procedure)* main EOF
includes   ::= ("#include" STRING_LITERAL)*
stmtlist   ::= (stmt)*
main       ::= "void" "main" "(" ")" body
procedure  ::= type IDENT "(" params ")" body
type       ::= "int" | "char" | "void"
params     ::= [ typeident ("," typeident)* ]
body       ::= "{" vardecls stmtlist "}"
typeident  ::= type IDENT
exp        ::= lexp ">" lexp
             | lexp "<" lexp
             | lexp ">=" lexp
             | lexp "<=" lexp
             | lexp "!=" lexp
             | lexp "==" lexp
             | lexp 
vardecls   ::= (typeident ";")*
stmt       ::= "{" vardecls stmtlist "}"
             | "while" "(" exp ")" stmt
             | "if" "(" exp ")" stmt ["else" stmt]
             | IDENT "=" lexp ";"
             | "return" [lexp] ";"
             | "print_s" "(" STRING_LITERAL ")" ";"
             | "print_c" "(" lexp ")" ";"
	     	 | "print_i" "(" lexp ")" ";"
             | funcall ";"	    
	     	 | "read_c" "(" ")" ";"
   	     	 | "read_i" "(" ")" ";"
lexp       ::= term (("+"|"-") term)*
term       ::= factor (("/"|"*"|"%") factor)*
factor     ::= "(" lexp ")"
             | ["-"] (IDENT|NUMBER)
             | CHARACTER
             | funcall
	     	 | "read_c" "(" ")"
	     	 | "read_i" "(" ")"
funcall    ::= IDENT "(" [ IDENT ("," IDENT)* ] ")"



/* remove EBNF form */
program      ::= includes vardecls procrep main EOF
includes     ::= "#include" STRING_LITERAL includes
			   | EMPTY
vardecls     ::= typeident ";" vardecls
			   | EMPTY
procrep      ::= procedure procrep
			   | EMPTY
main         ::= "void" "main" "(" ")" body


procedure    ::= type IDENT "(" params ")" body
type         ::= "int" 
			   | "char" 
			   | "void"
params       ::= paramlist
			   | EMPTY
paramlist    ::= typeident typeidentrep
typeident    ::= type IDENT
typeidentrep ::= "," typeident typeidentrep
			   | EMPTY
body         ::= "{" vardecls stmtlist "}"


exp          ::= lexp exptemp
exptemp 	 ::= ">" lexp
               | "<" lexp
               | ">=" lexp
               | "<=" lexp
               | "!=" lexp
               | "==" lexp
               | EMPTY
lexp       ::= term (("+"|"-") term)*
term       ::= factor (("/"|"*"|"%") factor)*
factor       ::= "(" lexp ")"
               | "-" IDENT
               | "-" NUMBER
               | IDENT
               | NUMBER
               | CHARACTER
               | funcall
	     	   | "read_c" "(" ")"
	     	   | "read_i" "(" ")"


funcall      ::= IDENT "(" arglist ")"
arglist      ::= IDENT argrep
			   | EMPTY
argrep       ::= "," IDENT argrep
			   | EMPTY


stmtlist     ::= stmt stmtlist
			   | EMPTY			   
stmt	     ::= "{" vardecls stmtlist "}"
			   | "while" "(" exp ")" stmt
			   | "if" "(" exp ")" stmt elsestmt   	     	 
			   | IDENT "=" lexp ";"
			   | "return" lexp ";"
			   | "return" ";"
			   | "print_s" "(" STRING_LITERAL ")" ";"
               | "print_c" "(" lexp ")" ";"
	     	   | "print_i" "(" lexp ")" ";"
               | funcall ";"	    
	     	   | "read_c" "(" ")" ";"
   	     	   | "read_i" "(" ")" ";"
elsestmt     ::= "else" stmt
			   | EMPTY
